<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="left|center_vertical"
    android:paddingBottom="10dip"
    android:paddingTop="10dip" >

    <TextView
        android:id="@+id/Notv"
        android:layout_width="35dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:gravity="left|center_vertical"
        android:singleLine="true"
        android:text="No"
        android:textColor="#636363"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:layout_width="410dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tx1"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/time"
            android:textColor="#636363"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/tx2"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/action"
            android:textColor="#636363"
            android:textSize="@dimen/title_size" >
        </TextView>
        
        <TextView
            android:id="@+id/operator"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/operator"
            android:textColor="#636363"
            android:textSize="@dimen/title_size" >
        </TextView>
    </LinearLayout>

</LinearLayout>